--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^5.10.9",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-facebook-token": "^4.0.0"
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-token": "^0.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
